// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML converter builds basic portable text into HTML 1`] = `"<p><br/></p><p>text<a href=http://google.com"><strong>link</strong></a></p><h1>heading</h1><p><br/></p>"`;

exports[`HTML converter resolves a linked item 1`] = `"<p>resolved value of text_element: <strong>random text value</strong></p><p>text after component</p>"`;

exports[`HTML converter resolves a table 1`] = `"<table><tbody><tr><td><p>Ivan</p></td><td><p>Jiri</p></td></tr><tr><td><p>Ondra</p></td><td><p>Dan</p></td></tr></tbody></table>"`;

exports[`HTML converter resolves an asset 1`] = `"<img src="https://assets-us-01.kc-usercontent.com:443/cec32064-07dd-00ff-2101-5bde13c9e30c/3594632c-d9bb-4197-b7da-2698b0dab409/Riesachsee_Dia_1_1963_%C3%96sterreich_16k_3063.jpg"></img>"`;

exports[`HTML converter resolves internal link 1`] = `"<p><a href="https://website.com/23f71096-fa89-4f59-a3f9-970e970944ec"><em>item</em></a></p>"`;

exports[`portable text transformer Transform table with everything in it 1`] = `
[
  {
    "_key": "guid",
    "_type": "table",
    "numColumns": 3,
    "rows": [
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "
",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 2,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "strong",
                      "guid",
                    ],
                    "text": "NanoBlade X",
                  },
                ],
                "markDefs": [
                  {
                    "_key": "guid",
                    "_type": "internalLink",
                    "reference": {
                      "_ref": "e2d97322-470a-42e7-a31e-40be26c2ef24",
                      "_type": "reference",
                    },
                  },
                ],
                "style": "normal",
              },
              {
                "_key": "guid",
                "_type": "image",
                "asset": {
                  "_ref": "bb79f32d-4fed-4d46-bec3-71b1c285ca30",
                  "_type": "reference",
                  "url": "https://qa-preview-assets-eu-01.devkontentmasters.com:443/0a12060e-20af-0124-a95d-871d26379561/2af0a87f-d750-4f6c-b6ff-8f895fa7d235/scalpel_blade_12.jpg",
                },
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 2,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "strong",
                      "guid",
                    ],
                    "text": "NanoBlade V",
                  },
                ],
                "markDefs": [
                  {
                    "_key": "guid",
                    "_type": "internalLink",
                    "reference": {
                      "_ref": "abaf708d-5d91-4b50-9905-30f1d0f482f9",
                      "_type": "reference",
                    },
                  },
                ],
                "style": "normal",
              },
              {
                "_key": "guid",
                "_type": "image",
                "asset": {
                  "_ref": "f6827ddf-7b07-49c3-819d-5270f1ac0164",
                  "_type": "reference",
                  "url": "https://qa-preview-assets-eu-01.devkontentmasters.com:443/0a12060e-20af-0124-a95d-871d26379561/653b1fc7-466a-4d91-945a-964ae4f9570a/scalpel_blade_11.jpg",
                },
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "Nano-scale Cutting",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "Offers ultra-fine incisions with precision",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "Provides precise incisions",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "Blade Material",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "guid",
                    ],
                    "text": "Advanced material",
                  },
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": " for durability",
                  },
                ],
                "markDefs": [
                  {
                    "_key": "guid",
                    "_type": "link",
                    "data-asset-id": "d27a4f12-c51c-4d64-bb8f-6dcd008abb96",
                    "href": "https://qa-preview-assets-eu-01.devkontentmasters.com:443/0a12060e-20af-0124-a95d-871d26379561/090af31a-6188-4c37-9623-1422fa966d3d/DALL%C2%B7E%202023-06-21%2008.57.55%20-%20GFenerate%20a%20scientific%20showcase%20of%20the%20the%20molecule%20similar%20to%20corabon%20.png",
                  },
                ],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "High-quality material",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "Imaging Compatibility",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "strong",
                    ],
                    "text": "Seamless integration",
                  },
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": " with imaging tech",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "Limited integration",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "guid",
                    ],
                    "text": "Regulatory Compliance",
                  },
                ],
                "markDefs": [
                  {
                    "_key": "guid",
                    "_type": "link",
                    "href": "https://www.nbstsa.org/cst-certification",
                    "title": "CST certification",
                  },
                ],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 4,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "Exceeds regulatory standards",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "Basic",
                  },
                ],
                "level": 1,
                "listItem": "bullet",
                "markDefs": [],
                "style": "normal",
              },
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "Advanced",
                  },
                ],
                "level": 1,
                "listItem": "bullet",
                "markDefs": [],
                "style": "normal",
              },
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "strong",
                    ],
                    "text": "Advaced II",
                  },
                ],
                "level": 2,
                "listItem": "bullet",
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "Meets regulatory standards",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`portable text transformer doesn't create duplicates for nested spans 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "text",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
        ],
        "text": "bold",
      },
    ],
    "markDefs": [],
    "style": "normal",
  },
]
`;

exports[`portable text transformer doesn't extend link mark to adjacent spans 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "The coffee drinking culture has been evolving for hundreds and thousands of years. It has never been ",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "guid",
        ],
        "text": "so rich as ",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
          "guid",
        ],
        "text": "today",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": ". How do you make sense of different types of coffee, what do the particular names in beverage menus mean and what beverage to choose for which occasion in your favorite café?",
      },
    ],
    "markDefs": [
      {
        "_key": "guid",
        "_type": "internalLink",
        "reference": {
          "_ref": "3120ec15-a4a2-47ec-8ccd-c85ac8ac5ba5",
          "_type": "reference",
        },
      },
    ],
    "style": "normal",
  },
]
`;

exports[`portable text transformer handles larger tables 1`] = `
[
  {
    "_key": "guid",
    "_type": "table",
    "numColumns": 6,
    "rows": [
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "column",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`portable text transformer resolves adjacent styled fonts in table cell 1`] = `
[
  {
    "_key": "guid",
    "_type": "table",
    "numColumns": 1,
    "rows": [
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "strong",
                    ],
                    "text": "bold",
                  },
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "em",
                    ],
                    "text": "italic",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`portable text transformer resolves table cells containing styled fonts 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "first    ",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "second",
      },
    ],
    "level": 2,
    "listItem": "bullet",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "second",
      },
    ],
    "level": 2,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "second        ",
      },
    ],
    "level": 2,
    "listItem": "bullet",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "third",
      },
    ],
    "level": 3,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
]
`;

exports[`portable text transformer transforms complex rich text into portable text 1`] = `
[
  {
    "_key": "guid",
    "_type": "table",
    "numColumns": 1,
    "rows": [
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 2,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "list item",
                  },
                ],
                "level": 1,
                "listItem": "bullet",
                "markDefs": [],
                "style": "normal",
              },
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "nested list item",
                  },
                ],
                "level": 2,
                "listItem": "number",
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
    ],
  },
  {
    "_key": "guid",
    "_type": "table",
    "numColumns": 3,
    "rows": [
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 2,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "paragraph 1",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "paragraph 2",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "list item",
                  },
                ],
                "level": 1,
                "listItem": "bullet",
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "guid",
                    ],
                    "text": "this is a",
                  },
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "strong",
                      "guid",
                    ],
                    "text": "strong",
                  },
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "guid",
                    ],
                    "text": "link",
                  },
                ],
                "markDefs": [
                  {
                    "_key": "guid",
                    "_type": "link",
                    "data-new-window": "true",
                    "href": "http://google.com",
                    "rel": "noopener noreferrer",
                    "target": "_blank",
                    "title": "linktitle",
                  },
                ],
                "style": "normal",
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "strong",
                    ],
                    "text": "nadpis",
                  },
                ],
                "markDefs": [],
                "style": "h1",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [
                      "em",
                    ],
                    "text": "italic text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
    ],
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "text",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "guid",
        ],
        "text": "normal and",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
          "guid",
        ],
        "text": "bold",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "guid",
        ],
        "text": "link",
      },
    ],
    "markDefs": [
      {
        "_key": "guid",
        "_type": "link",
        "data-new-window": "true",
        "href": "http://google.com",
        "rel": "noopener noreferrer",
        "target": "_blank",
        "title": "linktitle",
      },
    ],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "heading",
      },
    ],
    "markDefs": [],
    "style": "h1",
  },
  {
    "_key": "guid",
    "_type": "component",
    "component": {
      "_ref": "test_item",
      "_type": "reference",
    },
  },
]
`;

exports[`portable text transformer transforms empty rich text 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "
",
      },
    ],
    "markDefs": [],
    "style": "normal",
  },
]
`;

exports[`portable text transformer transforms external links 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
        ],
        "text": "Kontent supports portable text!",
      },
    ],
    "markDefs": [],
    "style": "h2",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "For more information, check out the related ",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
          "guid",
        ],
        "text": "GitHub repository.",
      },
    ],
    "markDefs": [
      {
        "_key": "guid",
        "_type": "link",
        "data-new-window": "true",
        "href": "https://github.com/portabletext/portabletext",
        "rel": "noopener noreferrer",
        "target": "_blank",
        "title": "Portable text repo",
      },
    ],
    "style": "normal",
  },
]
`;

exports[`portable text transformer transforms images 1`] = `
[
  {
    "_key": "guid",
    "_type": "image",
    "asset": {
      "_ref": "7d866175-d3db-4a02-b0eb-891fb06b6ab0",
      "_type": "reference",
      "url": "https://assets-eu-01.kc-usercontent.com:443/6d864951-9d19-0138-e14d-98ba886a4410/236ecb7f-41e3-40c7-b0db-ea9c2c44003b/sharad-bhat-62p19OGT2qg-unsplash.jpg",
    },
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "em",
        ],
        "text": "text in a paragraph",
      },
    ],
    "markDefs": [],
    "style": "normal",
  },
]
`;

exports[`portable text transformer transforms item links 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "guid",
        ],
        "text": "text",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
          "guid",
        ],
        "text": "link to an item",
      },
    ],
    "markDefs": [
      {
        "_key": "guid",
        "_type": "internalLink",
        "reference": {
          "_ref": "23f71096-fa89-4f59-a3f9-970e970944ec",
          "_type": "reference",
        },
      },
    ],
    "style": "normal",
  },
]
`;

exports[`portable text transformer transforms linked items/components 1`] = `
[
  {
    "_key": "guid",
    "_type": "component",
    "component": {
      "_ref": "test_item",
      "_type": "reference",
    },
  },
]
`;

exports[`portable text transformer transforms lists 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "first level bullet",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "first level bullet",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "nested number in bullet list",
      },
    ],
    "level": 2,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "first level item",
      },
    ],
    "level": 1,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "first level item",
      },
    ],
    "level": 1,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "second level item",
      },
    ],
    "level": 2,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
        ],
        "text": "second level item ",
      },
    ],
    "level": 2,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
]
`;

exports[`portable text transformer transforms nested styles 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
        ],
        "text": "all text is bold and last part is ",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "em",
          "strong",
        ],
        "text": "also italic and this is also ",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "em",
          "strong",
          "sup",
        ],
        "text": "superscript",
      },
    ],
    "markDefs": [],
    "style": "normal",
  },
]
`;
